--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,6 @@ crossterm = { version = "0.27.0", features = ["event-stream"] }
 futures = "0.3.29"
 ratatui = "0.24.0"
 tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread", "sync"] }
+tokio-util = "0.7.10"
 tracing = "0.1.40"
 tracing-subscriber = "0.3.17"
